--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-dark mb-4" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
                 <img src="./img/duck.png" alt="logo" width="50" height="44">
@@ -40,9 +40,28 @@
           </nav>
     </header>
     <main>
-        <div class="container">
-            <h1>Catalogo Libri</h1>
-        </div>
+       <section class="hero">
+         <div class="container">
+            <h1 class="d-none">Catalogo Libri</h1>
+         </div>
+       </section>
+       <section class="main-content">
+         <div class="container">
+            <div class="row">
+                <div class="col-8 border py-5">
+                    <div class="row">
+                        <div class="col-6 ">
+                            <h2>Catalogo libri</h2>
+                        </div>
+                        <div class="col-6">
+                            <button class="btn-primary">Aggiungi libro</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 border py-5">Col2</div>
+            </div>
+         </div>
+       </section>
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
