--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogo libri</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <header>
@@ -40,25 +41,155 @@
           </nav>
     </header>
     <main>
+<!-- start hero section -->
        <section class="hero">
          <div class="container">
             <h1 class="d-none">Catalogo Libri</h1>
          </div>
        </section>
-       <section class="main-content">
-         <div class="container">
+  <!-- end hero section      -->
+   <!-- start catalogue section -->
+       <section class="catalogue-section">
+          <div class="container">
             <div class="row">
-                <div class="col-8 border py-5">
+                <div class="col-9 border py-5">
                     <div class="row">
                         <div class="col-6 ">
-                            <h2>Catalogo libri</h2>
+                            <h3 d-flex justify-content-start>Catalogo Libri</h3>
                         </div>
-                        <div class="col-6">
-                            <button class="btn-primary">Aggiungi libro</button>
+                        <div class="col-6 d-flex justify-content-end">
+                            <button class=" btn btn-primary">Aggiungi libro</button>
                         </div>
                     </div>
+                  <!-- catalogue section table   -->
+                  <div class="container pt-2">
+                    <div class="row">
+                    <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th colspan="4">Titolo</th>
+                            <th scope="col d-flex justify-content-end">Data prestito</th>
+                            <th>Stato</th>
+                            <th scope="col">Azioni</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td colspan="4">I pilastri della terra</td>
+                            <td>-</td>
+                            <td><span class="label disponibile-label">Disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button>                                
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">I promessi sposi</td>
+                            <td>-</td>
+                            <td><span class="label disponibile-label">Disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Il signore degli anelli</td>
+                            <td>18/10/2023</td>
+                            <td><span class="label in-prestito-label">In prestito</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button>   
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Harry Potter e la pietra filosofale</td>
+                            <td>-</td>
+                            <td><span class="label disponibile-label">Disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Il codice da Vinci</td>
+                            <td>-</td>
+                            <td><span class="label non-disponibile-label">Non disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Shining</td>
+                            <td>-</td>
+                            <td><span class="label disponibile-label">Disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">La divina commedia</td>
+                            <td>21/09/2023</td>
+                            <td><span class="label in-prestito-label">In prestito</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Il trono di spade</td>
+                            <td>-</td>
+                            <td><span class="label disponibile-label">Disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Il mondo di Sofia</td>
+                            <td>-</td>
+                            <td><span class="label non-disponibile-label">Non disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                            <td>25/07/2023</td>
+                            <td><span class="label in-prestito-label">In prestito</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">Il piccolo principe</td>
+                            <td>-</td>
+                            <td><span class="label disponibile-label">Disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                          <tr>
+                            <td colspan="4">La storia infinita</td>
+                            <td>-</td>
+                            <td><span class="label disponibile-label">Disponibile</span></td>
+                            <td>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button>
+                                <button class=" btn btn-outline-secondary"><i class="bi bi-trash3-fill"></i></button> 
+                            </td> 
+                          </tr>
+                         </tbody>
+                      </table>
+                    </div>
+                      <!-- end catalogue section table -->
+                  </div>
                 </div>
-                <div class="col-3 border py-5">Col2</div>
+              <!-- end catalogue section            -->
+            <div class="col-3 border py-5">Col2</div>
             </div>
          </div>
        </section>
