--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Catalogo libri</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
     <header>
@@ -52,7 +53,7 @@
        <section class="catalogue-section">
           <div class="container">
             <div class="row">
-                <div class="col-9 border py-5">
+                <div class="col-9 py-5">
                     <div class="row">
                         <div class="col-6 ">
                             <h3 d-flex justify-content-start>Catalogo Libri</h3>
