Adding todo checkbox list

--- a/index.html
+++ b/index.html
@@ -191,15 +191,39 @@
                 </div>
               <!-- end catalogue section            -->
               <!-- start sidebar -->
-            <div class="col-3 border py-5">
+            <div class="col-3 py-5">
                 <div class="container border"> 
-                    <h3 class="sidebar-title">Todo</h3>
+                  <div class="row">
+                    <div class="col-12 sidebar-title">
+                        <h3>Todo</h3>
+                   </div>
+                  <div class="row">
+                      <div class="col-12">                
+                    <ul class="list-group p-4">
+                            <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                              Chiamare segreteria
+                            </li>
+                            <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                              Mandare avvisi prestiti scaduti
+                            </li>
+                            <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                              Ordinare nuovi libri
+                            </li>
+                          </ul>
+                         </div>
+                        </div>
+                    </div>
+                  
                 </div>
-                <div class="container border">
+                <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <h3 class="sidebar-title">F.A.Q.</h3>
-                        <div class="accordion" id="accordionExample">
+                    <div class="col-12 sidebar-title">
+                        <h3>F.A.Q.</h3>
+                     </div>
+                        <div class=" col-12 accordion" id="accordionExample">
                             <div class="accordion-item">
                               <h2 class="accordion-header">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
