adjusting column size for responsivity

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        <section class="catalogue-section">
           <div class="container">
             <div class="row">
-                <div class="col-9 py-5">
+                <div class="col-12 col-lg-9 py-5">
                     <div class="row">
                         <div class="col-6 ">
                             <h3 d-flex justify-content-start>Catalogo Libri</h3>
@@ -191,11 +191,11 @@
                 </div>
               <!-- end catalogue section            -->
               <!-- start sidebar -->
-            <div class="col-3 py-5">
-                <div class="container border"> 
+            <div class="col-12 col-lg-3 py-5">
+                <div class="container border rounded mb-4"> 
                   <div class="row">
-                    <div class="col-12 sidebar-title">
-                        <h3>Todo</h3>
+                    <div class="col-12 sidebar-title border-bottom">
+                        <h3 class="p-1">Todo</h3>
                    </div>
                   <div class="row">
                       <div class="col-12">                
@@ -218,12 +218,12 @@
                     </div>
                   
                 </div>
-                <div class="container">
+                <div class="container border rounded">
                 <div class="row">
-                    <div class="col-12 sidebar-title">
-                        <h3>F.A.Q.</h3>
+                    <div class="col-12 sidebar-title border-bottom">
+                        <h3 class="p-1">F.A.Q.</h3>
                      </div>
-                        <div class=" col-12 accordion" id="accordionExample">
+                        <div class=" col-12 accordion accordion-flush" id="accordionExample">
                             <div class="accordion-item">
                               <h2 class="accordion-header">
                                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
