fixing  h3 e button catalogue section

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
           <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-9 py-5">
-                    <div class="row">
-                        <div class="col-6 ">
-                            <h3 d-flex justify-content-start>Catalogo Libri</h3>
-                        </div>
-                        <div class="col-6 d-flex justify-content-end">
-                            <button class=" btn btn-primary">Aggiungi libro</button>
-                        </div>
-                    </div>
+                    <div class="row justify-content-between">
+                      <div class="col-auto">
+                          <h3 d-flex justify-content-start>Catalogo Libri</h3>
+                      </div>
+                      <div class="col-auto">
+                          <button class=" btn btn-primary">Aggiungi libro</button>
+                      </div>
+                  </div>
                   <!-- catalogue section table   -->
                   <div class="container pt-2">
                     <div class="row">
