--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <thead>
                           <tr>
                             <th colspan="4">Titolo</th>
-                            <th scope="col d-flex justify-content-end">Data prestito</th>
+                            <th scope="col">Data prestito</th>
                             <th>Stato</th>
                             <th scope="col">Azioni</th>
                           </tr>
