--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="col-12 col-lg-9 py-5">
                     <div class="row justify-content-between">
                       <div class="col-auto">
-                          <h3 d-flex justify-content-start>Catalogo Libri</h3>
+                          <h3>Catalogo Libri</h3>
                       </div>
                       <div class="col-auto">
                           <button class=" btn btn-primary">Aggiungi libro</button>
@@ -268,7 +268,7 @@
              
             <!-- fine sidebar -->
             </div>
-         </div>
+         
        </section>
     </main>
     <footer></footer>
