fixing amet error

--- a/index.html
+++ b/index.html
@@ -282,19 +282,19 @@
             <div class="col-lg-4">
               <img src="./img/books-1655783_640.jpg" alt="biblioteca-1">
               <p class="title-card">Biblioteca 1</p>
-              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores at fugiat. Tempore, dolore. <amet class="Lorem10"></amet></p>
+              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores at fugiat. Tempore, dolore.</p>
               <a class="mb-4" href="">Scopri di più</a>
             </div>
             <div class="col-lg-4">
               <img src="./img/library-2507902_640.jpg" alt="biblioteca-2">
               <p class="title-card">Biblioteca 2</p>
-              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam aliquam explicabo impedit dolor ipsam.<amet class="Lorem10"></amet></p>
+              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam aliquam explicabo impedit dolor ipsam</p>
               <a  class="mb-4" href="">Scopri di più</a>
             </div>
             <div class="col-lg-4">
               <img src="./img/library-5219747_640.jpg" alt="biblioteca-3">
               <p class="title-card">Biblioteca 3</p>
-              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum commodi ipsam ipsa labore. <amet class="Lorem10"></amet></p>
+              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum commodi ipsam ipsa labore</amet></p>
               <a class="mb-4" href="#">Scopri di più</a>
             </div>
           </div>
