fixing second amet error

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="col-lg-4">
               <img src="./img/library-5219747_640.jpg" alt="biblioteca-3">
               <p class="title-card">Biblioteca 3</p>
-              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum commodi ipsam ipsa labore</amet></p>
+              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum commodi ipsam ipsa labore</p>
               <a class="mb-4" href="#">Scopri di più</a>
             </div>
           </div>
