--- a/create-user.html
+++ b/create-user.html
@@ -72,7 +72,7 @@
                    </div>
                    <div class="col-5 col-lg-2">
                     <label for="zip" class="form-label fw-semibold">CAP</label>
-                    <input type="number" class="form-control" name="zip" id="zip" placeholder="20100">
+                    <input type="text" class="form-control" name="zip" id="zip" placeholder="20100" maxlength="5">
                    </div>
                    <div class="col-12 d-grid gap-2">
                     <button class="btn btn-primary" type="button" id="button-addon1">Create user</button>
