add action attribute form

--- a/create-user.html
+++ b/create-user.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" aria-current="page" href="index.html">Catalogo Libri</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="create-user.html">Nuovo utente</a>
+                    <a class="nav-link active" href="create-user.html">Nuovo Utente</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Storico Prestiti</a>
@@ -47,7 +47,7 @@
            <p>Crea il tuo account per poter accedere al cicuito bibliotecario Duck Library Network</p>
         </div>
         <div class="container pt-2">
-            <form class="new-user-form" method="GET">
+            <form class="new-user-form" action="" method="GET">
                 <div class="row g-3">
                     <div class="col-lg-6">
                         <label for="name" class="form-label fw-semibold">Nome*</label>
