section card btn and background

--- a/index.html
+++ b/index.html
@@ -272,33 +272,43 @@
     </div>
 </section>
         <!-- start libriry circuit section -->
-         <section>
-        <div class="container mb-4">
-          <div class="bg-secondary-subtle text-center">
+         <section>          
+        <div class="container mb-4 ">
+          <div class="bg-dark-subtle text-center mb-5">
             <h3><img class="logo pe-1" src="./img/duck.png" alt="logo">Duck Library Network</h3>
             <p>Il circuito bibliotecario Duck Library Network è un circuito gestito da enti privati ed accomuna
               tre biblioteche private, ma i nostri libri sono accessebili a tutti tramite iscrizione.
             </p>
-          </div>
-          <div class="row library-card border-secondary-subtle text-center">
-            <div class="col-lg-4 mb-4">
-              <img src="./img/books-1655783_640.jpg" alt="biblioteca-1">
-              <p class="title-card">Biblioteca 1</p>
-              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores at fugiat. Tempore, dolore.</p>
-              <a class="mb-4" href="">Scopri di più</a>
-            </div>
-            <div class="col-lg-4 mb-4">
-              <img src="./img/library-2507902_640.jpg" alt="biblioteca-2">
-              <p class="title-card">Biblioteca 2</p>
-              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam aliquam explicabo impedit dolor ipsam</p>
-              <a  class="mb-4" href="">Scopri di più</a>
-            </div>
-            <div class="col-lg-4 mb-4">
-              <img src="./img/library-5219747_640.jpg" alt="biblioteca-3">
-              <p class="title-card">Biblioteca 3</p>
-              <p>Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum commodi ipsam ipsa labore</p>
-              <a class="mb-4" href="#">Scopri di più</a>
-            </div>
+          </div>          
+          <div class="row library-card border-secondary-subtle text-center justify-content-evenly">
+              <div class=" col-lg-4 mb-4 card border-secondary-subtle" style="width: 23rem;">
+                <img src="./img/books-1655783_640.jpg" class="card-img-top p-1" alt="biblioteca-1">
+                <div class="card-body">
+                  <h5 class="card-title">Biblioteca 1</h5>
+                  <p class="card-text">Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores at fugiat. Tempore, dolore.</p>
+                  <a href="#" class=" btn btn-primary"><span><i class="bi bi-search"></i> SCOPRI DI PI&#218;</span></a>
+                </div>
+              </div>    
+          
+              <div class="col-lg-4 mb-4 card border-secondary-subtle" style="width: 23rem;">
+                <img src="./img/library-2507902_640.jpg" class="card-img-top p-1" alt="biblioteca-2">
+                <div class="card-body">
+                  <h5 class="card-title">Biblioteca 2</h5>
+                  <p class="card-text">Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores at fugiat. Tempore, dolore.</p>
+                  <a href="#" class="btn btn-primary"><span><i class="bi bi-search"></i> SCOPRI DI PI&#218;</span></a>
+                </div>
+              </div>  
+              <!-- -------------------- -->
+              <div class="col-lg-4 mb-4 card border-secondary-subtle"" style="width: 23rem;">
+                <img src="./img/library-5219747_640.jpg" class="card-img-top p-1" alt="biblioteca-3">
+                <div class="card-body">
+                  <h5 class="card-title">Biblioteca 3</h5>
+                  <p class="card-text">Questa biblioteca si trova in ccc, ha una lunga storia. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque asperiores at fugiat. Tempore, dolore.</p>
+                  <a href="#" class="btn btn-primary"><span><i class="bi bi-search"></i> SCOPRI DI PI&#218;</span></a>
+                </div>
+              </div>  
+              <!-- ------------------------------ -->
+         
           </div>
         </div>
          </section>
